--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p><a href="#">login</a></p>
         <p><a href="#">signup</a></p>
         <p><a href="#">logout</a></p>
-        <p><a href="#">jjio</a></p>
+        <p><a href="#">rewards</a></p>
         <p><a href="#">dsdc</a></p>
       </div>
     </header>
@@ -110,4 +110,5 @@
   </div>
   <script src="app.js"></script>
 </body>
+
 </html>
