--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><a href="#">signup</a></p>
         <p><a href="#">logout</a></p>
         <p><a href="#">rewards</a></p>
-        <p><a href="#">dsdc</a></p>
+        <p><a href="#">Latest</a></p>
       </div>
     </header>
     <section class="hero-section autoBlur">
@@ -112,3 +112,4 @@
 </body>
 
 </html>
+
