--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
          <div class="card autoDisplay">
-          <h1>RADIANT</h1>
+          <h1>ZORO</h1>
           <p>An anime and a gaming-inspired NFT collection - the IP primed for expansion.</p>
 
           <video src="videos/feature-2.mp4" loop autoplay muted plays-inline></video>
@@ -112,4 +112,5 @@
 </body>
 
 </html>
+
 
