--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="head-left">
         <img src="img/logo.png" alt="Logo">
-        <button>products</button>
+        <button>OUR Products</button>
       </div>
       <div class="head-right">
         <p><a href="#">login</a></p>
@@ -112,5 +112,6 @@
 </body>
 
 </html>
+
 
 
