--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="head-right">
         <p><a href="#">login</a></p>
-        <p><a href="#">signup</a></p>
+        <p><a href="#">Signup</a></p>
         <p><a href="#">logout</a></p>
         <p><a href="#">rewards</a></p>
         <p><a href="#">Latest</a></p>
@@ -112,6 +112,7 @@
 </body>
 
 </html>
+
 
 
 
